Add pattern flags support and duplicate detection tests
Support configuring Pattern.Flag values (e.g., CASE_INSENSITIVE) on
pattern constraints via YAML, closing a gap where baseline annotation
patterns carried flags but configured patterns always had none. Also
add tests for the existing duplicate class/field detection in
GeneratedClassMetadataCache.